force-app/main/default/objects/Dealer_Scorecard__c/Dealer_Scorecard__c.object-meta.xml
<CustomObject>
    <label>Dealer Scorecard</label>
    <nameField>
        <displayFormat>DS-{00000}</displayFormat>
        <label>Dealer Scorecard</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>