force-app/main/default/objects/Dealer_Scorecard__c/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <description>Previous calendar year front-door revenue.</description>
    <inlineHelpText>Enter the previous calendar year annual front-door revenue for the store.  If the store has not been open for a full calendar year, leave blank.</inlineHelpText>
    <label>Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>