force-app/main/default/objects/Dealer_Scorecard__c/fields/Annual_Revenue_Score__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Score__c</fullName>
    <formula>IF(ROUND(Annual_Revenue__c /  Dealer__r.Buxton_Score__c ,2) &gt;= 1.20,10,
 IF(AND(ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &gt;= 1.10,ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &lt;= 1.19),9,
  IF(AND(ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &gt;= 1.01,ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &lt;= 1.09),8,
   IF(AND(ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &gt; 0.99,ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &lt; 1.01),7,
    IF(AND(ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &gt;= 0.95,ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &lt;= 0.99),6,
     IF(AND(ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &gt;= 0.90,ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &lt;= 0.94),5,
      IF(AND(ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &gt;= 0.85,ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &lt;= 0.89),4,
       IF(AND(ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &gt;= 0.80,ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &lt;= 0.84),3,
        IF(AND(ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &gt;= 0.75,ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &lt;= 0.79),2,
         IF(AND(ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &gt;= 0.70,ROUND(Annual_Revenue__c / Dealer__r.Buxton_Score__c,2) &lt;= 0.74),1,0 
         )
        )
       )
      )
     )
    )
   )
  )
 )
)</formula>
    <label>Annual Revenue Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>