force-app/main/default/objects/Dealer_Scorecard__c/fields/Build_out_Remodel_Comments__c.field-meta.xml
<CustomField>
    <fullName>Build_out_Remodel_Comments__c</fullName>
    <description>Used to enter any additional comments for Build-out or Remodel eveluation</description>
    <inlineHelpText>Enter any additional comments for Build-out/Remodel assessment.</inlineHelpText>
    <label>Build-out/Remodel Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>