force-app/main/default/objects/Dealer_Scorecard__c/fields/Buxton_Score__c.field-meta.xml
<CustomField>
    <fullName>Buxton_Score__c</fullName>
    <formula>Dealer__r.Buxton_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buxton Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>