force-app/main/default/objects/Dealer_Scorecard__c/fields/Contractor_Direction_Followed__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Direction_Followed__c</fullName>
    <description>Indicates to what extent the Dealer followed the contractors recommendations/direction.</description>
    <inlineHelpText>How well did the Dealer follow the contractors recommendations/direction?</inlineHelpText>
    <label>Contractor Direction Followed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Some</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>