force-app/main/default/objects/Dealer_Scorecard__c/fields/Contractor_Direction_Score__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Direction_Score__c</fullName>
    <formula>CASE( Contractor_Direction_Followed__c , 
&quot;All&quot;,10, 
&quot;Some&quot;,5, 
&quot;None&quot;,1, 
0)</formula>
    <label>Contractor Direction Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>