force-app/main/default/objects/Dealer_Scorecard__c/fields/Dealer_Buildout_Score__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Buildout_Score__c</fullName>
    <formula>( Initial_Credit_Score_Score__c +  xStore_for_POS__c + Dealer_Communication_Score__c + RWS_Contractor_Score__c + Contractor_Direction_Score__c + Design_Compliance_Score__c + Task_Completion_Score__c + Receipt_Submission_Score__c + Emod_Completion_Score__c +  Training_Attendance_Score__c ) / 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Buildout Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>