force-app/main/default/objects/Dealer_Scorecard__c/fields/Dealer_Communication__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Communication__c</fullName>
    <description>Indicates how well the dealer communicates with RWSC during the store build-out or remodel process.</description>
    <inlineHelpText>Did dealer communicate regularly to keep project moving forward?</inlineHelpText>
    <label>Dealer Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Issues</fullName>
            </value>
            <value>
                <fullName>Moderate Issues</fullName>
            </value>
            <value>
                <fullName>Significant Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>