force-app/main/default/objects/Dealer_Scorecard__c/fields/Dealer_Communication_Score__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Communication_Score__c</fullName>
    <description>Calculates the dealers communication score during Build-out or Remodel</description>
    <formula>CASE( Dealer_Communication__c , 
&quot;No Issues&quot;,10, 
&quot;Moderate Issues&quot;,5, 
&quot;Significant Issues&quot;,1, 
0)</formula>
    <label>Dealer Communication Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>