force-app/main/default/objects/Dealer_Scorecard__c/fields/Dealer_Score__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Score__c</fullName>
    <formula>( Annual_Revenue_Score__c + xStore_for_POS__c + RD_Score__c + TSM_Score__c + ROM_Score__c + ISM_Score__c +  MKT_Score__c  ) / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Annual Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>