force-app/main/default/objects/Dealer_Scorecard__c/fields/Design_Compliance_Score__c.field-meta.xml
<CustomField>
    <fullName>Design_Compliance_Score__c</fullName>
    <formula>CASE( RWS_Site_Design_Compliance__c , 
&quot;All&quot;,10, 
&quot;Some&quot;,5, 
&quot;None&quot;,1, 
0)</formula>
    <label>Design Compliance Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>