force-app/main/default/objects/Dealer_Scorecard__c/fields/Emod_Completion__c.field-meta.xml
<CustomField>
    <fullName>Emod_Completion__c</fullName>
    <description>Indicates the percentage of emods completed by the store prior to opening.</description>
    <inlineHelpText>Enter the % of emods completed by the store prior to opening.</inlineHelpText>
    <label>Emod Completion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>70%</fullName>
            </value>
            <value>
                <fullName>60%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>