force-app/main/default/objects/Dealer_Scorecard__c/fields/Emod_Completion_Score__c.field-meta.xml
<CustomField>
    <fullName>Emod_Completion_Score__c</fullName>
    <description>Calculates the score for Emod completion</description>
    <formula>CASE( Emod_Completion__c , 
     &quot;100%&quot;,10,
     &quot;90%&quot;,9,
     &quot;80%&quot;,8,
     &quot;70%&quot;,7,
     &quot;60%&quot;,6,
     &quot;50%&quot;,5,
     &quot;40%&quot;,4,
     &quot;30%&quot;,3,
     &quot;20%&quot;,2,
     &quot;10%&quot;,1,
     &quot;0%&quot;,1,
 0)</formula>
    <label>Emod Completion Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>