force-app/main/default/objects/Dealer_Scorecard__c/fields/Initial_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Initial_Credit_Score__c</fullName>
    <formula>Dealer__r.Initial_Credit_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Credit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>