force-app/main/default/objects/Dealer_Scorecard__c/fields/Initial_Credit_Score_Score__c.field-meta.xml
<CustomField>
    <fullName>Initial_Credit_Score_Score__c</fullName>
    <formula>IF(Dealer__r.Initial_Credit_Score__c &gt;= 825,10,
   IF(Dealer__r.Initial_Credit_Score__c &gt;= 800,9,
      IF(Dealer__r.Initial_Credit_Score__c &gt;= 775,8,
         IF(Dealer__r.Initial_Credit_Score__c &gt;= 750,7,
            IF(Dealer__r.Initial_Credit_Score__c &gt;= 725,6, 
               IF(Dealer__r.Initial_Credit_Score__c &gt;= 700,5,
                  IF(Dealer__r.Initial_Credit_Score__c &gt;= 675,4,
                     IF(Dealer__r.Initial_Credit_Score__c &gt;= 650,3,
                        IF(Dealer__r.Initial_Credit_Score__c &gt;= 625,2,
                           IF(Dealer__r.Initial_Credit_Score__c &lt;= 624,1,0
                           ) 
                        ) 
                     ) 
                  ) 
               ) 
            ) 
         ) 
      )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Credit Score Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>