force-app/main/default/objects/Dealer_Scorecard__c/fields/ISM_Industrial_Account_Sharing_Score__c.field-meta.xml
<CustomField>
    <fullName>ISM_Industrial_Account_Sharing_Score__c</fullName>
    <formula>CASE(  ISM_Industrial_Account_Sharing__c  , 
&quot;All&quot;,10, 
&quot;Some&quot;,5, 
&quot;None&quot;,1, 
0)</formula>
    <label>ISM - RWfB Program Compliance Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>