force-app/main/default/objects/Dealer_Scorecard__c/fields/ISM_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>ISM_Overall_Score__c</fullName>
    <formula>( ISM_Program_Compliance_Score__c  + ISM_Regional_Cooperation_Score__c + ISM_Regional_Call_Attendance_Score__c + ISM_Industrial_Account_Sharing_Score__c + ISM_FSL_Participation_Score__c ) / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISM - Overall Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>