force-app/main/default/objects/Dealer_Scorecard__c/fields/ISM_Regional_Call_Attendance__c.field-meta.xml
<CustomField>
    <fullName>ISM_Regional_Call_Attendance__c</fullName>
    <description>Select the most appropriate level that represents the dealers participation in regional calls.</description>
    <inlineHelpText>Select the most appropriate level that represents the dealers participation in regional calls.</inlineHelpText>
    <label>ISM - Regional Call Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Some</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>