force-app/main/default/objects/Dealer_Scorecard__c/fields/MKT_Comments__c.field-meta.xml
<CustomField>
    <fullName>MKT_Comments__c</fullName>
    <label>MKT - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>