force-app/main/default/objects/Dealer_Scorecard__c/fields/MKT_Email_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>MKT_Email_Engagement_Score__c</fullName>
    <formula>CASE( MKT_Marketing_Email_Engagement__c , 
&quot;70%&quot;,10, 
&quot;60%&quot;,7, 
&quot;40%&quot;,5, 
&quot;30%&quot;,3, 
&quot;&lt;29%&quot;,1, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MKT - Email Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>