force-app/main/default/objects/Dealer_Scorecard__c/fields/MKT_Marketing_Email_Engagement__c.field-meta.xml
<CustomField>
    <fullName>MKT_Marketing_Email_Engagement__c</fullName>
    <label>MKT - Marketing Email Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>70%</fullName>
            </value>
            <value>
                <fullName>60%</fullName>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>&lt;29%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>