force-app/main/default/objects/Dealer_Scorecard__c/fields/MKT_Marketing_Meeting_Score__c.field-meta.xml
<CustomField>
    <fullName>MKT_Marketing_Meeting_Score__c</fullName>
    <formula>CASE( MKT_RW_Mkt_Meeting_QMC_last_2_yr__c , 
&quot;100%&quot;,10, 
&quot;80%&quot;,7, 
&quot;50%&quot;,3, 
&quot;&lt;50%&quot;,1, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MKT - Marketing Meeting Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>