force-app/main/default/objects/Dealer_Scorecard__c/fields/MKT_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>MKT_Overall_Score__c</fullName>
    <formula>( MKT_Email_Address_Score__c + MKT_Email_Engagement_Score__c + MKT_Marketing_Meeting_Score__c + MKT_Promo_Sales_Score__c + MKT_RW_Mkt_Participation_Score__c ) / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MKT - Overall Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>