force-app/main/default/objects/Dealer_Scorecard__c/fields/MKT_Promo_Sales_Last_2_Cycles__c.field-meta.xml
<CustomField>
    <fullName>MKT_Promo_Sales_Last_2_Cycles__c</fullName>
    <label>MKT - Promo Sales (Last 2 Cycles)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$80,000</fullName>
            </value>
            <value>
                <fullName>$60,000</fullName>
            </value>
            <value>
                <fullName>$50,000</fullName>
            </value>
            <value>
                <fullName>$40,000</fullName>
            </value>
            <value>
                <fullName>$20,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>