force-app/main/default/objects/Dealer_Scorecard__c/fields/MKT_Promo_Sales_Score__c.field-meta.xml
<CustomField>
    <fullName>MKT_Promo_Sales_Score__c</fullName>
    <formula>CASE( MKT_Promo_Sales_Last_2_Cycles__c , 
&quot;$80,000&quot;,10, 
&quot;$60,000&quot;,7, 
&quot;$50,000&quot;,5, 
&quot;$40,000&quot;,3, 
&quot;$20,000&quot;,1, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MKT - Promo Sales Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>