force-app/main/default/objects/Dealer_Scorecard__c/fields/MKT_RW_Mkt_Meeting_QMC_last_2_yr__c.field-meta.xml
<CustomField>
    <fullName>MKT_RW_Mkt_Meeting_QMC_last_2_yr__c</fullName>
    <label>MKT - RW Mkt Meeting (QMC)- (last 2 yr)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>&lt;50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>