force-app/main/default/objects/Dealer_Scorecard__c/fields/MKT_RW_Mkt_Participation_Last_4_Years__c.field-meta.xml
<CustomField>
    <fullName>MKT_RW_Mkt_Participation_Last_4_Years__c</fullName>
    <label>MKT - RW Mkt Participation(Last 4 Years)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>70%</fullName>
            </value>
            <value>
                <fullName>60%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>&lt;50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>