force-app/main/default/objects/Dealer_Scorecard__c/fields/MKT_RW_Mkt_Participation_Score__c.field-meta.xml
<CustomField>
    <fullName>MKT_RW_Mkt_Participation_Score__c</fullName>
    <formula>CASE( MKT_RW_Mkt_Participation_Last_4_Years__c, 
&quot;80%&quot;,10, 
&quot;70%&quot;,7, 
&quot;60%&quot;,6, 
&quot;50%&quot;,5, 
&quot;&lt;50%&quot;,1, 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MKT - RW Mkt Participation Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>