force-app/main/default/objects/Dealer_Scorecard__c/fields/RD_Fitting_Stool_Lead_Participation__c.field-meta.xml
<CustomField>
    <fullName>RD_Fitting_Stool_Lead_Participation__c</fullName>
    <description>Select the most appropriate level that represents the dealers participation in fitting stool leads.</description>
    <inlineHelpText>Select the most appropriate level that represents the dealers participation in fitting stool leads.</inlineHelpText>
    <label>RD - Fitting Stool Lead Participation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Issues</fullName>
            </value>
            <value>
                <fullName>Moderate Issues</fullName>
            </value>
            <value>
                <fullName>Significant Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>