force-app/main/default/objects/Dealer_Scorecard__c/fields/RD_Industrial_Account_Sharing__c.field-meta.xml
<CustomField>
    <fullName>RD_Industrial_Account_Sharing__c</fullName>
    <description>RWfB Program Compliance – Is the dealer properly following RWfB?</description>
    <inlineHelpText>RWfB Program Compliance – Is the dealer properly following RWfB?</inlineHelpText>
    <label>RD - RWfB Program Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Some</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>