force-app/main/default/objects/Dealer_Scorecard__c/fields/RD_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>RD_Overall_Score__c</fullName>
    <formula>(RD_RW_Program_Compliance_Score__c +  RD_Regional_Cooperation_Score__c + RD_Regional_Meeting_Attendance_Score__c + RD_Regional_Call_Attendance_Score__c + RD_Industrial_Account_Sharing_Score__c + RD_FSL_Participation_Score__c + RD_Red_Wing_Marketing_Score__c  ) / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RD - Overall Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>